[package]
name = "day-02"
version = "0.1.0"
authors = ["Andy Soffer <asoffer@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"

[dependencies]
scan_fmt = "*"
adjacent-pair-iterator = "0.1.2"
